--- a/index.html
+++ b/index.html
@@ -1,13 +1,9 @@
-<!-- Proudly coded by Billy (https://bybilly.uk) -->
-<!-- Version: 1.2 -->
-
-
 <!DOCTYPE html>
 <html>
 <head>
-	<title>MyServer - Official Website</title>
-	<meta name="description" content="MyServer is a revolutionary Minecraft server. You can join with the IP 'play.myserver.net'.">
-	<meta name="keywords" content="MyServer, MyServer.com, Minecraft Server, Minecraft, Fun, Play, Portal, Website, Official">
+	<title>LeaguOfGamers - PokeCraft</title>
+	<meta name="description" content="LeagueOfGamers is a revolutionary Minecraft server. Which Adds A Pixlemon With Roleplay & Voicechat at India. You can join with the IP 'play.logesport.in'.">
+	<meta name="keywords" content="log, Leagueofgamers, Minecraft Server, Minecraft, Fun, Play, Portal, Website, Official, Pixlemon, India, Pixlemon India, Minecraft Roleplay, Minecraft Roleplay India, Best Reoleplay Server India, Voicechat on Minecraft">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<meta charset="utf-8">
 	<link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;600;700&display=swap" rel="stylesheet">
@@ -37,7 +33,7 @@
 					<div class="overlay"></div>
 					Forums
 				</li></a>
-				<div class="log"><img alt="MyServer Logo" class="logo" src="img/logo.png"></div>
+				<div class="log"><img alt="LeagueOfGamers Logo" class="logo" src="img/logo.png"></div>
 				<a href="#games"><li class="h">
 					<div class="overlay"></div>
 					Games
@@ -68,8 +64,8 @@
 			<!-- Replace play.myserver.net with your IP address -->
 			<!-- Do it for both examples below -->
 			<!-- Please set both your IP and port -->
-			<p class="info">Join <span class="sip" data-ip="play.cubecraft.net" data-port="25565">
-			0</span> other players on <span class="ip">play.cubecraft.net</span></p>
+			<p class="info">Join <span class="sip" data-ip="play.logesport.in" data-port="25565">
+			0</span> other players on <span class="ip">play.logesport.in</span></p>
 		</div>
 	</header>
 	<div class="main">
