--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 	<title>LeaguOfGamers - PokeCraft</title>
 	<meta name="description" content="LeagueOfGamers is a revolutionary Minecraft server. Which Adds A Pixlemon With Roleplay & Voicechat at India. You can join with the IP 'play.logesport.in'.">
-	<meta name="keywords" content="log, Leagueofgamers, Minecraft Server, Minecraft, Fun, Play, Portal, Website, Official, Pixlemon, India, Pixlemon India, Minecraft Roleplay, Minecraft Roleplay India, Best Reoleplay Server India, Voicechat on Minecraft">
+	<meta name="keywords" content="log, Leagueofgamers, Minecraft Server, Minecraft, Fun, Play, Portal, Website, Official, Pixlemon, India, Pixlemon India, Minecraft Roleplay, Minecraft Roleplay India, Best Reoleplay Server India, Voicechat on">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<meta charset="utf-8">
 	<link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;600;700&display=swap" rel="stylesheet">
@@ -60,7 +60,7 @@
 		</div>
 
 		<div class="hero" id="main">
-			<h1>Welcome to MyServer</h1>
+			<h1>Welcome to LeagueOfGamers Pokecraft</h1>
 			<!-- Replace play.myserver.net with your IP address -->
 			<!-- Do it for both examples below -->
 			<!-- Please set both your IP and port -->
@@ -96,8 +96,9 @@
 			<h2>OUR GAMES</h2>
 			<div class="game e">
 				<div>
-					<h3>SKYBLOCK</h3>
-					<p>Skyblock is a gamemode where you start on a floating island with minimal resources. Compete with others or join them and jump to the top of the leaderboards! Difficult challenges are set for you through your sky adventure, complete them for rewards! It takes perseverance, dedication, and effort to get to the top!</p>
+					<h3>PIXLEMON</h3>
+					<p>Pixelmon Generations is a Pokémon mod you can apply to Minecraft to transform the game into a pixelated Pokémon paradise. You’ll find Pokémon roaming the many biomes on your journey from the likes of Bulbasaur to Ditto that you can catch, tame, and fight with. Pixelmon is a Pokémon-inspired world in Minecraft, so you’ll still be able to visit shops, gyms, and centers as you would in Pokémon.</p>
+					<p>If you want to combine your favourite games, then here’s how to get the Minecraft Pokémon mod, including how to download Pixelmon Generations, and a full list of all the console commands for the best experience.</p>
 				</div>
 				<img alt="MyServer SkyBlock Server" class="gimg a" src="img/skyblock.png">
 			</div>
@@ -106,7 +107,7 @@
 
 			<div class="game f">
 				<div>
-					<h3>FACTIONS</h3>
+					<h3>ROLEPLAY</h3>
 					<p>Factions is a popular team-based, pvp orientated gamemode where you claim land, build a base with your friends, and raid other factions. We have several awesome features such as custom enchantments and a handy shop GUI. Compete with other factions and strive to become the top faction, winning a free store coupon, today!</p>
 				</div>
 				<img alt="MyServer Factions Server" class="gimg b" src="img/factions.png">
@@ -116,7 +117,7 @@
 
 			<div class="game g">
 				<div>
-					<h3>KITPVP</h3>
+					<h3>VoiceChat</h3>
 					<p>KitPvP is a competitive, fast-paced gamemode packed with players! Chose your kit and join the race to the top of the leaderboard. Explore our custom map and test your skills on parkour in secret rooms. Whether you are an archer, gladiator or tactician there is a kit for you. Join the fight today on MyServer!</p>
 				</div>
 				<img alt="MyServer KitPvP Server" class="gimg c" src="img/kitpvp.png">
