--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 				<div class="log"><img alt="LeagueOfGamers Logo" class="logo" src="img/logo.png"></div>
 				<a href="#games"><li class="h">
 					<div class="overlay"></div>
-					Games
+					Features
 				</li></a>
 				<a href="#contact"><li class="h">
 					<div class="overlay"></div>
@@ -93,14 +93,14 @@
 			</div>
 		</div>
 		<div id="games">
-			<h2>OUR GAMES</h2>
+			<h2>OUR Features</h2>
 			<div class="game e">
 				<div>
 					<h3>PIXLEMON</h3>
 					<p>Pixelmon Generations is a Pokémon mod you can apply to Minecraft to transform the game into a pixelated Pokémon paradise. You’ll find Pokémon roaming the many biomes on your journey from the likes of Bulbasaur to Ditto that you can catch, tame, and fight with. Pixelmon is a Pokémon-inspired world in Minecraft, so you’ll still be able to visit shops, gyms, and centers as you would in Pokémon.</p>
 					<p>If you want to combine your favourite games, then here’s how to get the Minecraft Pokémon mod, including how to download Pixelmon Generations, and a full list of all the console commands for the best experience.</p>
 				</div>
-				<img alt="MyServer SkyBlock Server" class="gimg a" src="img/skyblock.png">
+				<img alt="Pixlemon.png" class="gimg a" src="img/pixlemon.png">
 			</div>
 
 			<hr>
@@ -110,7 +110,7 @@
 					<h3>ROLEPLAY</h3>
 					<p>Factions is a popular team-based, pvp orientated gamemode where you claim land, build a base with your friends, and raid other factions. We have several awesome features such as custom enchantments and a handy shop GUI. Compete with other factions and strive to become the top faction, winning a free store coupon, today!</p>
 				</div>
-				<img alt="MyServer Factions Server" class="gimg b" src="img/factions.png">
+				<img alt="Roleplay.png" class="gimg b" src="img/roleplay.webp">
 			</div>
 
 			<hr>
@@ -118,9 +118,10 @@
 			<div class="game g">
 				<div>
 					<h3>VoiceChat</h3>
-					<p>KitPvP is a competitive, fast-paced gamemode packed with players! Chose your kit and join the race to the top of the leaderboard. Explore our custom map and test your skills on parkour in secret rooms. Whether you are an archer, gladiator or tactician there is a kit for you. Join the fight today on MyServer!</p>
+					<p>LeagueOfGamers adds the ability to talk to your friends through Minecraft & Discord, simply Join a Voice Channel On Discord After Linking Your Minecraft Account With Discord.It Will Automatic Drag You Guys To A Different Voice Room On Discord is undoubtedly the quickest way to convey a message, useful in combat, social and general interactions. My favorite feature is the semi-realistic voice chat, in short, only players near you can hear/talk to you, it's called distance based voice chat.</p>
 				</div>
-				<img alt="MyServer KitPvP Server" class="gimg c" src="img/kitpvp.png">
+				<img alt="MyServer KitPvP Server" class="gimg c" src="img/voicechat1.gif">
+				<img alt="MyServer KitPvP Server" class="gimg c" src="img/voicechat.gif">
 			</div>
 
 			<hr>
@@ -130,32 +131,32 @@
 				<h2>OUR TEAM</h2>
 				<div class="staff-team">
 					<div>
-						<h3>BlexieKing</h3>
+						<h3>Evilspirit</h3>
 						<div class="owner">Owner</div>
 						<img alt="MyServer Staff Member" src="img/blexieking.png">
 					</div>
 
 					<div>
-						<h3>Bae4lyfe</h3>
-						<div class="owner">Owner</div>
+						<h3>LoG-LegendX</h3>
+						<div class="manager">Manager</div>
 						<img alt="MyServer Staff Member" src="img/bae4lyfe.png">
 					</div>
 
 					<div>
-						<h3>TheSlimyBro</h3>
-						<div class="manager">Manager</div>
+						<h3>GamerBoyInd</h3>
+						<div class="admin">Builder</div>
 						<img alt="MyServer Staff Member" src="img/theslimybro.png">
 					</div>
 
 					<div>
-						<h3>Ryjay</h3>
-						<div class="admin">Admin</div>
+						<h3>LoG_Salu-Op</h3>
+						<div class="admin">Builder</div>
 						<img alt="MyServer Staff Member" src="img/ryjay.png">
 					</div>
 
 					<div>
-						<h3>LeanAndRekt</h3>
-						<div class="admin">Admin</div>
+						<h3>Parasar</h3>
+						<div class="admin">Helper</div>
 						<img alt="MyServer Staff Member" src="img/leanandrekt.png">
 					</div>
 				</div>
