--- a/index.html
+++ b/index.html
@@ -74,21 +74,21 @@
 				<i class="fa fa-rocket fa-4x"></i>
 				<span>
 					<h3>OUR HISTORY</h3>
-					<p>MyServer has been around for over 2 years now. What started off as a small community minecraft server has developed into something we couldn't even imagine.</p>
+					<p><b>LeagueOfGamers</b> has been around for over 10 Month now. What started off as a small community minecraft server has developed into something we couldn't even imagine.</p>
 				</span>
 			</div>
 			<div>
 				<i class="fa fa-user fa-4x"></i>
 				<span>
 					<h3>OUR STAFF</h3>
-					<p>The MyServer staff team are friendly, dedicated, and always online to help everything run smoothly. Have any questions? Make sure to do /staff ingame to reach out!</p>
+					<p>The <b>LeagueOfGamers-Pokecraft</b> staff team are friendly, dedicated, and always online to help everything run smoothly. Have any questions? Make sure to Join Discord or use /discord ingame to reach out!</p>
 				</span>
 			</div>
 			<div>
 				<i class="fa fa-server fa-4x"></i>
 				<span>
 					<h3>OUR SERVERS</h3>
-					<p>We have <b>Factions</b>, <b>KitPvP</b>, and <b>SkyBlock</b> on our network, all with fully custom builds and useful perks and features. Join today at play.myserver.com!</p>
+					<p>We have <b>Pixlemon</b>, <b>Roleplay</b>, and <b>MC-Duels</b> on our network, all with fully custom builds and useful perks and features. Get whitelisted Today!</p>
 				</span>
 			</div>
 		</div>
@@ -166,20 +166,19 @@
 			<div class="an-img">
 				<h2>NEWS & ANNOUNCEMENTS</h2>
 				<p class="an-t">
-					<b>We just released MyServer 2.0!</b>
+					<b>We just released Pixlemon Roleplay With Voicechat!</b>
 					<br><br>
-					And it went extremely well. We couldn't be more proud to run MyServer. We hit over 800 players, a new record for the server, and the staff worked in overdrive to catch hackers, doing an amazing job. In fact, just on that Saturday, 36 hackers were permanently banned from our network.
+					And it went extremely well. We couldn't be more proud to run LeagueOfGamers. We hit over 150 players, a new record for the server, and the staff worked in overdrive to catch hackers, doing an amazing job. In fact, just on Last 2 Month, 15 hackers were permanently banned from our network.
 					<br><br>
-					New maps, new staff members, new plugins; the server has been reinvented. With this new update, SkyBlock especially has a new (fully custom) PvP map which can hold about 500 players. As well as that, we added...
+					New maps, new Gamemode, new plugins; the server has been reinvented. With this new update, whitelisted Pixlemon Roleplay especially has a new (fully custom) map which can hold about 80 players. As well as that, we added...
 					<br><br>
-					<a href="#" class="btn">Read More</a>
+					<a href="https://discord.logesport.in/" class="btn">Join Discord</a>
 				</p>
 			</div>
 		</div>
 		<div id="contact">
 			<h2>CONTACT US</h2>
-			<p>Email - <a href="mailto:admin@myserver.com">admin@myserver.com</a></p>
-			<p>Discord - <a href="https://discordapp.com/invite/y0uRliNk">discordapp.com/invite/y0uRliNk</a></p>
+			<p>Discord - <a href="https://discord.logesport.in">Discord.logesport.in</a></p>
 		</div>
 	</div>
 	<footer>
