--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 				</li></a>
 				<a href="#"><li class="h">
 					<div class="overlay"></div>
-					Forums
+					Whitelist
 				</li></a>
 				<div class="log"><img alt="LeagueOfGamers Logo" class="logo" src="img/logo.png"></div>
 				<a href="#games"><li class="h">
@@ -40,7 +40,7 @@
 				</li></a>
 				<a href="#contact"><li class="h">
 					<div class="overlay"></div>
-					Contact Us
+					Store
 				</li></a>
 			</ul>
 			<div class="mnav" id="mnav">
