--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 					<div class="overlay"></div>
 					Home
 				</li></a>
-				<a href="#"><li class="h">
+				<a href="whitelist.html"><li class="h">
 					<div class="overlay"></div>
 					Whitelist
 				</li></a>
