--- a/index.html
+++ b/index.html
@@ -1,193 +1,233 @@
 <!DOCTYPE html>
 <html>
+
 <head>
-	<title>LeaguOfGamers - PokeCraft</title>
-	<meta name="description" content="LeagueOfGamers is a revolutionary Minecraft server. Which Adds A Pixlemon With Roleplay & Voicechat at India. You can join with the IP 'play.logesport.in'.">
-	<meta name="keywords" content="log, Leagueofgamers, Minecraft Server, Minecraft, Fun, Play, Portal, Website, Official, Pixlemon, India, Pixlemon India, Minecraft Roleplay, Minecraft Roleplay India, Best Reoleplay Server India, Voicechat on">
-	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<meta charset="utf-8">
-	<link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;600;700&display=swap" rel="stylesheet">
-	<link rel="stylesheet" href="css/stylesheet.css">
-	<script src="https://use.fontawesome.com/30155533f0.js"></script>
-	<script type="text/javascript">
-		function mobile() {
-			var bars = document.getElementById("mnav");
-			if(bars.className === "mnav") {
-				bars.className += " responsive";
-			} else {
-				bars.className = "mnav";
-			}
-		}
-	</script>
+    <title>LeaguOfGamers - PokeCraft</title>
+    <meta name="description" content="LeagueOfGamers is a revolutionary Minecraft server. Which Adds A Pixlemon With Roleplay & Voicechat at India. You can join with the IP 'play.logesport.in'.">
+    <meta name="keywords" content="log, Leagueofgamers, Minecraft Server, Minecraft, Fun, Play, Portal, Website, Official, Pixlemon, India, Pixlemon India, Minecraft Roleplay, Minecraft Roleplay India, Best Reoleplay Server India, Voicechat on">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta charset="utf-8">
+    <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;600;700&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="css/stylesheet.css">
+    <script src="https://use.fontawesome.com/30155533f0.js"></script>
+    <script type="text/javascript">
+        function mobile() {
+            var bars = document.getElementById("mnav");
+            if (bars.className === "mnav") {
+                bars.className += " responsive";
+            } else {
+                bars.className = "mnav";
+            }
+        }
+    </script>
 </head>
+
 <body>
-	<header>
-		<div class="nav">
-			<ul class="nav-items" id="nav-items">
-				<a><li onclick="mobile()" class="icon fa fa-bars fa-2x"></li></a>
-				<a href="#main"><li class="h">
-					<div class="overlay"></div>
-					Home
-				</li></a>
-				<a href="whitelist.html"><li class="h">
-					<div class="overlay"></div>
-					Whitelist
-				</li></a>
-				<div class="log"><img alt="LeagueOfGamers Logo" class="logo" src="img/logo.png"></div>
-				<a href="#games"><li class="h">
-					<div class="overlay"></div>
-					Features
-				</li></a>
-				<a href="#contact"><li class="h">
-					<div class="overlay"></div>
-					Store
-				</li></a>
-			</ul>
-			<div class="mnav" id="mnav">
-				<a href="#main"><li class="i">
-					Home
-				</li></a>
-				<a href="#"><li class="i">
-					Forums
-				</li></a>
-				<a href="#games"><li class="i">
-					Games
-				</li></a>
-				<a href="#contact"><li class="i">
-					Contact Us
-				</li></a>
-			</div>
-		</div>
+    <header>
+        <div class="nav">
+            <ul class="nav-items" id="nav-items">
+                <a>
+                    <li onclick="mobile()" class="icon fa fa-bars fa-2x"></li>
+                </a>
+                <a href="#main">
+                    <li class="h">
+                        <div class="overlay"></div>
+                        Home
+                    </li>
+                </a>
+                <a href="whitelist.html">
+                    <li class="h">
+                        <div class="overlay"></div>
+                        Whitelist
+                    </li>
+                </a>
+                <a href="#games">
+                    <li class="h">
+                        <div class="overlay"></div>
+                        Features
+                    </li>
+                </a>
+                <div class="log"><img alt="LeagueOfGamers Logo" class="logo" src="img/logo.png"></div>
+                <a href="#vote">
+                    <li class="h">
+                        <div class="overlay"></div>
+                        Vote
+                    </li>
+                </a>
+                <a href="store.logesport.in">
+                    <li class="h">
+                        <div class="overlay"></div>
+                        Store
+                    </li>
+                </a>
+                <a href="discord.logesport.in">
+                    <li class="h">
+                        <div class="overlay"></div>
+                        Discord
+                    </li>
+                </a>
+            </ul>
+            <div class="mnav" id="mnav">
+                <a href="#main">
+                    <li class="i">
+                        Home
+                    </li>
+                </a>
+                <a href="#">
+                    <li class="i">
+                        Forums
+                    </li>
+                </a>
+                <a href="#games">
+                    <li class="i">
+                        Games
+                    </li>
+                </a>
+                <a href="#contact">
+                    <li class="i">
+                        Contact Us
+                    </li>
+                </a>
+            </div>
+        </div>
 
-		<div class="hero" id="main">
-			<h1>Welcome to LeagueOfGamers Pokecraft</h1>
-			<!-- Replace play.myserver.net with your IP address -->
-			<!-- Do it for both examples below -->
-			<!-- Please set both your IP and port -->
-			<p class="info">Join <span class="sip" data-ip="play.logesport.in" data-port="25565">
-			0</span> other players on <span class="ip">play.logesport.in</span></p>
-		</div>
-	</header>
-	<div class="main">
-		<div id="description">
-			<div>
-				<i class="fa fa-rocket fa-4x"></i>
-				<span>
+        <div class="hero" id="main">
+            <h1>Welcome to LeagueOfGamers Pokecraft</h1>
+            <!-- Replace play.myserver.net with your IP address -->
+            <!-- Do it for both examples below -->
+            <!-- Please set both your IP and port -->
+            <p class="info">Join <span class="sip" data-ip="play.logesport.in" data-port="25565">
+					0</span> other players on <span class="ip">play.logesport.in</span></p>
+        </div>
+    </header>
+    <div class="main">
+        <div id="description">
+            <div>
+                <i class="fa fa-rocket fa-4x"></i>
+                <span>
 					<h3>OUR HISTORY</h3>
-					<p><b>LeagueOfGamers</b> has been around for over 10 Month now. What started off as a small community minecraft server has developed into something we couldn't even imagine.</p>
+					<p><b>LeagueOfGamers</b> has been around for over 10 Month now. What started off as a small
+						community minecraft server has developed into something we couldn't even imagine.</p>
 				</span>
-			</div>
-			<div>
-				<i class="fa fa-user fa-4x"></i>
-				<span>
+            </div>
+            <div>
+                <i class="fa fa-user fa-4x"></i>
+                <span>
 					<h3>OUR STAFF</h3>
-					<p>The <b>LeagueOfGamers-Pokecraft</b> staff team are friendly, dedicated, and always online to help everything run smoothly. Have any questions? Make sure to Join Discord or use /discord ingame to reach out!</p>
+					<p>The <b>LeagueOfGamers-Pokecraft</b> staff team are friendly, dedicated, and always online to help
+						everything run smoothly. Have any questions? Make sure to Join Discord or use /discord ingame to
+						reach out!</p>
 				</span>
-			</div>
-			<div>
-				<i class="fa fa-server fa-4x"></i>
-				<span>
+            </div>
+            <div>
+                <i class="fa fa-server fa-4x"></i>
+                <span>
 					<h3>OUR SERVERS</h3>
-					<p>We have <b>Pixlemon</b>, <b>Roleplay</b>, and <b>MC-Duels</b> on our network, all with fully custom builds and useful perks and features. Get whitelisted Today!</p>
+					<p>We have <b>Pixlemon</b>, <b>Roleplay</b>, and <b>MC-Duels</b> on our network, all with fully
+						custom builds and useful perks and features. Get whitelisted Today!</p>
 				</span>
-			</div>
-		</div>
-		<div id="games">
-			<h2>OUR Features</h2>
-			<div class="game e">
-				<div>
-					<h3>PIXLEMON</h3>
-					<p>Pixelmon Generations is a Pokémon mod you can apply to Minecraft to transform the game into a pixelated Pokémon paradise. You’ll find Pokémon roaming the many biomes on your journey from the likes of Bulbasaur to Ditto that you can catch, tame, and fight with. Pixelmon is a Pokémon-inspired world in Minecraft, so you’ll still be able to visit shops, gyms, and centers as you would in Pokémon.</p>
-					<p>If you want to combine your favourite games, then here’s how to get the Minecraft Pokémon mod, including how to download Pixelmon Generations, and a full list of all the console commands for the best experience.</p>
-				</div>
-				<img alt="Pixlemon.png" class="gimg a" src="img/pixlemon.png">
-			</div>
+            </div>
+        </div>
+        <div id="games">
+            <h2>OUR Features</h2>
+            <div class="game e">
+                <div>
+                    <h3>PIXLEMON</h3>
+                    <p>Pixelmon Generations is a Pokémon mod you can apply to Minecraft to transform the game into a pixelated Pokémon paradise. You’ll find Pokémon roaming the many biomes on your journey from the likes of Bulbasaur to Ditto that you can
+                        catch, tame, and fight with. Pixelmon is a Pokémon-inspired world in Minecraft, so you’ll still be able to visit shops, gyms, and centers as you would in Pokémon.</p>
+                    <p>If you want to combine your favourite games, then here’s how to get the Minecraft Pokémon mod, including how to download Pixelmon Generations, and a full list of all the console commands for the best experience.</p>
+                </div>
+                <img alt="Pixlemon.png" class="gimg a" src="img/pixlemon.png">
+            </div>
 
-			<hr>
+            <hr>
 
-			<div class="game f">
-				<div>
-					<h3>ROLEPLAY</h3>
-					<p>Factions is a popular team-based, pvp orientated gamemode where you claim land, build a base with your friends, and raid other factions. We have several awesome features such as custom enchantments and a handy shop GUI. Compete with other factions and strive to become the top faction, winning a free store coupon, today!</p>
-				</div>
-				<img alt="Roleplay.png" class="gimg b" src="img/roleplay.webp">
-			</div>
+            <div class="game f">
+                <div>
+                    <h3>ROLEPLAY</h3>
+                    <p>Factions is a popular team-based, pvp orientated gamemode where you claim land, build a base with your friends, and raid other factions. We have several awesome features such as custom enchantments and a handy shop GUI. Compete with
+                        other factions and strive to become the top faction, winning a free store coupon, today!</p>
+                </div>
+                <img alt="Roleplay.png" class="gimg b" src="img/roleplay.webp">
+            </div>
 
-			<hr>
+            <hr>
 
-			<div class="game g">
-				<div>
-					<h3>VoiceChat</h3>
-					<p>LeagueOfGamers adds the ability to talk to your friends through Minecraft & Discord, simply Join a Voice Channel On Discord After Linking Your Minecraft Account With Discord.It Will Automatic Drag You Guys To A Different Voice Room On Discord is undoubtedly the quickest way to convey a message, useful in combat, social and general interactions. My favorite feature is the semi-realistic voice chat, in short, only players near you can hear/talk to you, it's called distance based voice chat.</p>
-				</div>
-				<img alt="MyServer KitPvP Server" class="gimg c" src="img/voicechat1.gif">
-				<img alt="MyServer KitPvP Server" class="gimg c" src="img/voicechat.gif">
-			</div>
+            <div class="game g">
+                <div>
+                    <h3>VoiceChat</h3>
+                    <p>LeagueOfGamers adds the ability to talk to your friends through Minecraft & Discord, simply Join a Voice Channel On Discord After Linking Your Minecraft Account With Discord.It Will Automatic Drag You Guys To A Different Voice Room
+                        On Discord is undoubtedly the quickest way to convey a message, useful in combat, social and general interactions. My favorite feature is the semi-realistic voice chat, in short, only players near you can hear/talk to you, it's
+                        called distance based voice chat.</p>
+                </div>
+                <img alt="MyServer KitPvP Server" class="gimg c" src="img/voicechat1.gif">
+                <img alt="MyServer KitPvP Server" class="gimg c" src="img/voicechat.gif">
+            </div>
 
-			<hr>
-		</div>
-		<div id="staff">
-			<div class="staff">
-				<h2>OUR TEAM</h2>
-				<div class="staff-team">
-					<div>
-						<h3>Evilspirit</h3>
-						<div class="owner">Owner</div>
-						<img alt="MyServer Staff Member" src="img/blexieking.png">
-					</div>
+            <hr>
+        </div>
+        <div id="staff">
+            <div class="staff">
+                <h2>OUR TEAM</h2>
+                <div class="staff-team">
+                    <div>
+                        <h3>Evilspirit</h3>
+                        <div class="owner">Owner</div>
+                        <img alt="MyServer Staff Member" src="img/blexieking.png">
+                    </div>
 
-					<div>
-						<h3>LoG-LegendX</h3>
-						<div class="manager">Manager</div>
-						<img alt="MyServer Staff Member" src="img/bae4lyfe.png">
-					</div>
+                    <div>
+                        <h3>LoG-LegendX</h3>
+                        <div class="manager">Manager</div>
+                        <img alt="MyServer Staff Member" src="img/bae4lyfe.png">
+                    </div>
 
-					<div>
-						<h3>GamerBoyInd</h3>
-						<div class="admin">Builder</div>
-						<img alt="MyServer Staff Member" src="img/theslimybro.png">
-					</div>
+                    <div>
+                        <h3>GamerBoyInd</h3>
+                        <div class="admin">Builder</div>
+                        <img alt="MyServer Staff Member" src="img/theslimybro.png">
+                    </div>
 
-					<div>
-						<h3>LoG_Salu-Op</h3>
-						<div class="admin">Builder</div>
-						<img alt="MyServer Staff Member" src="img/ryjay.png">
-					</div>
+                    <div>
+                        <h3>LoG_Salu-Op</h3>
+                        <div class="admin">Builder</div>
+                        <img alt="MyServer Staff Member" src="img/ryjay.png">
+                    </div>
 
-					<div>
-						<h3>Parasar</h3>
-						<div class="admin">Helper</div>
-						<img alt="MyServer Staff Member" src="img/leanandrekt.png">
-					</div>
-				</div>
-			</div>
-		</div>
-		<div id="announcement">
-			<div class="an-img">
-				<h2>NEWS & ANNOUNCEMENTS</h2>
-				<p class="an-t">
-					<b>We just released Pixlemon Roleplay With Voicechat!</b>
-					<br><br>
-					And it went extremely well. We couldn't be more proud to run LeagueOfGamers. We hit over 150 players, a new record for the server, and the staff worked in overdrive to catch hackers, doing an amazing job. In fact, just on Last 2 Month, 15 hackers were permanently banned from our network.
-					<br><br>
-					New maps, new Gamemode, new plugins; the server has been reinvented. With this new update, whitelisted Pixlemon Roleplay especially has a new (fully custom) map which can hold about 80 players. As well as that, we added...
-					<br><br>
-					<a href="https://discord.logesport.in/" class="btn">Join Discord</a>
-				</p>
-			</div>
-		</div>
-		<div id="contact">
-			<h2>CONTACT US</h2>
-			<p>Discord - <a href="https://discord.logesport.in">Discord.logesport.in</a></p>
-		</div>
-	</div>
-	<footer>
-		<img alt="MyServer Logo" src="img/logo.png">
-		<p>Copyright &copy; MyServer 2020</p>
-	</footer>
+                    <div>
+                        <h3>Parasar</h3>
+                        <div class="admin">Helper</div>
+                        <img alt="MyServer Staff Member" src="img/leanandrekt.png">
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div id="announcement">
+            <div class="an-img">
+                <h2>NEWS & ANNOUNCEMENTS</h2>
+                <p class="an-t">
+                    <b>We just released Pixlemon Roleplay With Voicechat!</b>
+                    <br><br> And it went extremely well. We couldn't be more proud to run LeagueOfGamers. We hit over 150 players, a new record for the server, and the staff worked in overdrive to catch hackers, doing an amazing job. In fact, just on
+                    Last 2 Month, 15 hackers were permanently banned from our network.
+                    <br><br> New maps, new Gamemode, new plugins; the server has been reinvented. With this new update, whitelisted Pixlemon Roleplay especially has a new (fully custom) map which can hold about 80 players. As well as that, we added...
+                    <br><br>
+                    <a href="https://discord.logesport.in/" class="btn">Join Discord</a>
+                </p>
+            </div>
+        </div>
+        <div id="vote">
+            <h2>VOTE US</h2>
+            <p>Discord - <a href="https://discord.logesport.in">Discord.logesport.in</a></p>
+        </div>
+    </div>
+    <footer>
+        <img alt="MyServer Logo" src="img/logo.png">
+        <p>Copyright &copy; MyServer 2020</p>
+    </footer>
 
 
-	<script src="https://code.jquery.com/jquery-1.11.2.min.js" type="text/javascript"></script>
-	<script src="js/main.js" type="text/javascript"></script>
+    <script src="https://code.jquery.com/jquery-1.11.2.min.js" type="text/javascript"></script>
+    <script src="js/main.js" type="text/javascript"></script>
 </body>
+
 </html>
