--- a/404.html
+++ b/404.html
@@ -23,7 +23,7 @@
 						<a href="https://discord.logesport.in" class="btn brk-btn-bg brk-btn">
 							Support Server
 						</a>
-						<a href="https://squidcraft.ro" class="btn brk-btn">
+						<a href="/" class="btn brk-btn">
 							Go to home page
 						</a>
 					</div>
