--- a/index.html
+++ b/index.html
@@ -2,11 +2,12 @@
 <html>
 
 <head>
-    <title>LeaguOfGamers - PokeCraft</title>
+	<title>LeaguOfGamers - PokeCraft</title>
+	<link rel="shortcut icon" type="image/x-icon" href="img/logo.png" />
     <meta name="description" content="LeagueOfGamers is a revolutionary Minecraft server. Which Adds A Pixlemon With Roleplay & Voicechat at India. You can join with the IP 'play.logesport.in'.">
     <meta name="keywords" content="log, Leagueofgamers, Minecraft Server, Minecraft, Fun, Play, Portal, Website, Official, Pixlemon, India, Pixlemon India, Minecraft Roleplay, Minecraft Roleplay India, Best Reoleplay Server India, Voicechat on">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta charset="utf-8">
+	<meta charset="utf-8">
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;600;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/stylesheet.css">
     <script src="https://use.fontawesome.com/30155533f0.js"></script>
@@ -145,8 +146,9 @@
             <div class="game f">
                 <div>
                     <h3>ROLEPLAY</h3>
-                    <p>Factions is a popular team-based, pvp orientated gamemode where you claim land, build a base with your friends, and raid other factions. We have several awesome features such as custom enchantments and a handy shop GUI. Compete with
-                        other factions and strive to become the top faction, winning a free store coupon, today!</p>
+					<p>RolePlay On Minecraft Is a Unique Gamemode Where You Can Play Your Story Though Your Way. On India This Is the Frist Server Who Featured Roleplay!</p>
+					<p><b>Basically On Our Server</b> When you fill the WHITELIST form of LOG, you can choose your own role to play on the server.Like you can play role of a TEAM ROCKET member, 
+						you can play as a police officer and you can even play as a gym leader.With these roles you are going to grind your pokemon trainer journey and try to become best amoung all...</p>
                 </div>
                 <img alt="Roleplay.png" class="gimg b" src="img/roleplay.webp">
             </div>
