--- a/404.html
+++ b/404.html
@@ -2,15 +2,15 @@
 <html lang="en">
 
 <head>
-    <title>404</title>
-    <!-- Meta tag Keywords -->
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta charset="UTF-8" />
-    <link rel="stylesheet" href="css/style.css" type="text/css" media="all" /><!-- Style-CSS -->
+	<title>404</title>
+	<!-- Meta tag Keywords -->
+	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<meta charset="UTF-8" />
+	<link rel="stylesheet" href="css/style.css" type="text/css" media="all" /><!-- Style-CSS -->
 </head>
 
 <body>
-    <!-- error -->
+	<!-- error -->
 	<section class="w3l-error-9">
 		<div class="error-page">
 			<div class="wrapper-full">
@@ -31,7 +31,8 @@
 				<div class="bottom-header">
 					<!-- copyright -->
 					<div class="copyrights text-center">
-						<p>2020 © - Made with ❤ by <a href="https://discord.logesport.in/" target="_blank">LeagueOfGamers</a> </p>
+						<p>2020 © - Made with ❤ by <a href="https://discord.logesport.in/"
+								target="_blank">LeagueOfGamers</a> </p>
 					</div>
 				</div>
 			</div>
