--- a/whitelist.html
+++ b/whitelist.html
@@ -31,7 +31,7 @@
                 <a>
                     <li onclick="mobile()" class="icon fa fa-bars fa-2x"></li>
                 </a>
-                <a href="#main">
+                <a href="index.html">
                     <li class="h">
                         <div class="overlay"></div>
                         Home
@@ -43,26 +43,18 @@
                         Whitelist
                     </li>
                 </a>
-                <a href="#games">
-                    <li class="h">
-                        <div class="overlay"></div>
-                        Features
-                    </li>
+                <a href="index.html/#games">
                 </a>
                 <div class="log"><img alt="LeagueOfGamers Logo" class="logo" src="img/logo.png"></div>
                 <a href="#vote">
-                    <li class="h">
-                        <div class="overlay"></div>
-                        Vote
-                    </li>
                 </a>
-                <a href="store.logesport.in">
+                <a href="https://store.logesport.in">
                     <li class="h">
                         <div class="overlay"></div>
                         Store
                     </li>
                 </a>
-                <a href="discord.logesport.in">
+                <a href="https://www.discord.logesport.in">
                     <li class="h">
                         <div class="overlay"></div>
                         Discord
@@ -93,7 +85,7 @@
             </div>
         </div>
 
-        <div class="hero" id="main">
+        <div class="hero1" id="main">
             <h1>
                 <div class="container" id="ff-compose"></div>
                 <script async defer
@@ -101,7 +93,7 @@
             </h1>
         </div>
     </header>
-    <footer>
+    <footer >
         <img alt="MyServer Logo" src="img/logo.png">
         <p>Copyright &copy; MyServer 2020</p>
     </footer>
