--- a/index.html
+++ b/index.html
@@ -241,8 +241,8 @@
 		</div>
 	</div>
 	<footer>
-		<img alt="MyServer Logo" src="img/logo.png">
-		<p>Copyright &copy; MyServer 2020</p>
+		<img alt="Server Logo" src="img/logo.png">
+		<p>Copyright &copy; LeagueOfGamers 2020</p>
 	</footer>
 
 
