--- a/index.html
+++ b/index.html
@@ -236,8 +236,41 @@
 			</div>
 		</div>
 		<div id="vote">
-			<h2>VOTE US</h2>
-			<p>Discord - <a href="https://discord.logesport.in">Discord.logesport.in</a></p>
+			<!-- Vote Section -->
+	<section id="vote">
+		<h1>VOTE FOR OUR SERVER</h1>
+		<p>Vote for some really amazing rewards</p>
+		<hr>
+		<div class="row votelist">
+			<!-- First Vote Link -->
+			<div class="col-md voteblock">
+				<img class="res-img-sm" src=img/serverorg.png>
+				<h2>MinecraftServers.org</h2>
+				<a href="https://minecraftservers.org/server/584817">Vote now</a>
+			</div>
+			<!-- End First Vote Link -->
+
+			<!-- Second Vote Link -->
+			<div class="col-md voteblock">
+				<img class="res-img-sm" src=img/top.png>
+				<h2>TopMinecraft</h2>
+				<a href="http://topminecraftservers.org/vote/12179">Vote now</a>
+			</div>
+			<!-- End Second Vote Link -->
+
+			<!-- Third Vote Link -->
+			<div class="col-md voteblock">
+				<img class="res-img-sm" src=img/mp.png>
+				<h2>MinecraftMP</h2>
+				<a href="https://minecraft-mp.com/server-s257193">Vote now</a>
+			</div>
+			<!-- End Third Vote Link -->
+		</div>
+
+		<!-- Note -->
+		<p>Please note that sometimes rewards can take up to 10 minutes to receive, if you don't receive any rewards, please contact a staff member.</p>
+	</section>
+	<!-- End Vote Section -->
 		</div>
 	</div>
 	<footer>
