Added TopMinecraftServer Image and Change Title

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-    <title>LeaguOfGamers - PokeCraft</title>
+    <title>LeagueOfGamers - PokeCraft</title>
     <link rel="shortcut icon" type="image/x-icon" href="img/logo.png" />
     <meta name="description" content="LeagueOfGamers is a revolutionary Minecraft server. Which Adds A Pixlemon With Roleplay & Voicechat at India. You can join with the IP 'play.logesport.in'.">
     <meta name="keywords" content="log, Leagueofgamers, Minecraft Server, Minecraft, Fun, Play, Portal, Website, Official, Pixlemon, India, Pixlemon India, Minecraft Roleplay, Minecraft Roleplay India, Best Reoleplay Server India, Voicechat on">
@@ -234,7 +234,7 @@
 
                     <!-- Second Vote Link -->
                     <div class="col-md voteblock">
-                        <img class="res-img-sm" src=img/top.png>
+                        <img class="res-img-sm" src=img/Top.png>
                         <h2>TopMinecraft</h2>
                         <a href="http://topminecraftservers.org/vote/12179">Vote now</a>
                     </div>
