Nothing Just Put Links

--- a/index.html
+++ b/index.html
@@ -55,13 +55,13 @@
                         Vote
                     </li>
                 </a>
-                <a href="store.logesport.in">
+                <a href="#" target="_blank">
                     <li class="h">
                         <div class="overlay"></div>
                         Store
                     </li>
                 </a>
-                <a href="https://discord.gg/u5SGtw95A6">
+                <a href="https://discord.gg/u5SGtw95A6" target="_blank">
                     <li class="h">
                         <div class="overlay"></div>
                         Discord
@@ -74,19 +74,29 @@
                         Home
                     </li>
                 </a>
-                <a href="#">
+                <a href="/whitelist.html">
                     <li class="i">
-                        Forums
+                        Whitelist
                     </li>
                 </a>
                 <a href="#games">
                     <li class="i">
-                        Games
+                        Features
                     </li>
                 </a>
-                <a href="#contact">
+                <a href="#vote">
                     <li class="i">
-                        Contact Us
+                        Vote
+                    </li>
+                </a>
+                <a href="#">
+                    <li class="i">
+                        Store
+                    </li>
+                </a>
+                <a href="https://discord.gg/u5SGtw95A6">
+                    <li class="i">
+                        Discord
                     </li>
                 </a>
             </div>
