Added Download-Page , Some Changes In Home-Page and Whitelist-Page

--- a/whitelist.html
+++ b/whitelist.html
@@ -3,10 +3,8 @@
 <head>
     <title>LeaguOfGamers - PokeCraft</title>
     <link rel="shortcut icon" type="image/x-icon" href="img/logo.png" />
-    <meta name="description"
-        content="LeagueOfGamers is a revolutionary Minecraft server. Which Adds A Pixlemon With Roleplay & Voicechat at India. You can join with the IP 'play.logesport.in'.">
-    <meta name="keywords"
-        content="log, Leagueofgamers, Minecraft Server, Minecraft, Fun, Play, Portal, Website, Official, Pixlemon, India, Pixlemon India, Minecraft Roleplay, Minecraft Roleplay India, Best Reoleplay Server India, Voicechat on">
+    <meta name="description" content="LeagueOfGamers is a revolutionary Minecraft server. Which Adds A Pixlemon With Roleplay & Voicechat at India. You can join with the IP 'play.logesport.in'.">
+    <meta name="keywords" content="log, Leagueofgamers, Minecraft Server, Minecraft, Fun, Play, Portal, Website, Official, Pixlemon, India, Pixlemon India, Minecraft Roleplay, Minecraft Roleplay India, Best Reoleplay Server India, Voicechat on">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta charset="utf-8">
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;600;700&display=swap" rel="stylesheet">
@@ -31,55 +29,28 @@
                 <a>
                     <li onclick="mobile()" class="icon fa fa-bars fa-2x"></li>
                 </a>
-                <a href="index.html">
+                <a href="index.html" target="_blank">
                     <li class="h">
                         <div class="overlay"></div>
                         Home
                     </li>
                 </a>
-                <a href="whitelist.html">
+                <a href="download.html" target="_blank">
                     <li class="h">
                         <div class="overlay"></div>
-                        Whitelist
-                    </li>
-                </a>
-                <a href="index.html/#games">
-                </a>
-                <div class="log"><img alt="LeagueOfGamers Logo" class="logo" src="img/logo.png"></div>
-                <a href="#vote">
-                </a>
-                <a href="https://store.logesport.in">
-                    <li class="h">
-                        <div class="overlay"></div>
-                        Store
-                    </li>
-                </a>
-                <a href="https://www.discord.logesport.in">
-                    <li class="h">
-                        <div class="overlay"></div>
-                        Discord
+                        Download
                     </li>
                 </a>
             </ul>
             <div class="mnav" id="mnav">
-                <a href="#main">
+                <a href="index.html">
                     <li class="i">
                         Home
                     </li>
                 </a>
-                <a href="#">
+                <a href="download.html">
                     <li class="i">
-                        Forums
-                    </li>
-                </a>
-                <a href="#games">
-                    <li class="i">
-                        Games
-                    </li>
-                </a>
-                <a href="#contact">
-                    <li class="i">
-                        Contact Us
+                        Download
                     </li>
                 </a>
             </div>
@@ -88,12 +59,11 @@
         <div class="hero1" id="main">
             <h1>
                 <div class="container" id="ff-compose"></div>
-                <script async defer
-                    src="https://formfacade.com/include/116926949128358884799/form/1FAIpQLSf5lf1dWENv3sG8w5Sz0EaeYcBRU8QUWQxCI3nQI6NIPT-_Bw/bootstrap.js?div=ff-compose"></script>
+                <script async defer src="https://formfacade.com/include/116926949128358884799/form/1FAIpQLSf5lf1dWENv3sG8w5Sz0EaeYcBRU8QUWQxCI3nQI6NIPT-_Bw/bootstrap.js?div=ff-compose"></script>
             </h1>
         </div>
     </header>
-    <footer >
+    <footer>
         <img alt="Server Logo" src="img/logo.png">
         <p>Copyright &copy; LeagueOfGamers 2020</p>
     </footer>
