--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
                         Home
                     </li>
                 </a>
-                <a href="whitelist.html">
+                <a href="whitelist.html" target="_blank">
                     <li class="h">
                         <div class="overlay"></div>
                         Whitelist
@@ -61,10 +61,10 @@
                         Store
                     </li>
                 </a>
-                <a href="https://discord.gg/u5SGtw95A6" target="_blank">
+                <a href="download.html" target="_blank">
                     <li class="h">
                         <div class="overlay"></div>
-                        Discord
+                        Download
                     </li>
                 </a>
             </ul>
@@ -74,7 +74,7 @@
                         Home
                     </li>
                 </a>
-                <a href="/whitelist.html">
+                <a href="whitelist.html">
                     <li class="i">
                         Whitelist
                     </li>
@@ -94,9 +94,9 @@
                         Store
                     </li>
                 </a>
-                <a href="https://discord.gg/u5SGtw95A6">
+                <a href="download.html">
                     <li class="i">
-                        Discord
+                        Download
                     </li>
                 </a>
             </div>
@@ -208,8 +208,13 @@
 
                     <div>
                         <h3>Parasar</h3>
-                        <div class="admin">Helper</div>
+                        <div class="admin helping">Helper</div>
                         <img alt="MyServer Staff Member" src="img/parasar.png">
+                    </div>
+                    <div>
+                        <h3>Diasuke</h3>
+                        <div class="admin helping">Helper</div>
+                        <img alt="MyServer Staff Member" src="img/salman.png">
                     </div>
                 </div>
             </div>
@@ -238,7 +243,7 @@
                     <div class="col-md voteblock">
                         <img class="res-img-sm" src=img/serverorg.png>
                         <h2>MinecraftServers.org</h2>
-                        <a href="https://minecraftservers.org/server/584817">Vote now</a>
+                        <a href="https://minecraftservers.org/server/584817" target="_blank">Vote now</a>
                     </div>
                     <!-- End First Vote Link -->
 
@@ -246,7 +251,7 @@
                     <div class="col-md voteblock">
                         <img class="res-img-sm" src=img/Top.png>
                         <h2>TopMinecraft</h2>
-                        <a href="http://topminecraftservers.org/vote/12179">Vote now</a>
+                        <a href="http://topminecraftservers.org/vote/12179" target="_blank">Vote now</a>
                     </div>
                     <!-- End Second Vote Link -->
 
@@ -254,7 +259,7 @@
                     <div class="col-md voteblock">
                         <img class="res-img-sm" src=img/mp.png>
                         <h2>MinecraftMP</h2>
-                        <a href="https://minecraft-mp.com/server-s270856">Vote now</a>
+                        <a href="https://minecraft-mp.com/server-s270856" target="_blank">Vote now</a>
                     </div>
                     <!-- End Third Vote Link -->
                 </div>
