Added Rules PAge , Some Changes In Downlad-Page , Home-Page , Whitelist-Page and Images Folder

--- a/download.html
+++ b/download.html
@@ -29,14 +29,14 @@
                 <a>
                     <li onclick="mobile()" class="icon fa fa-bars fa-2x"></li>
                 </a>
-                <a href="index.html" target="_blank">
+                <a href="index.html">
                     <li class="h">
                         <div class="overlay"></div>
                         Home
                     </li>
                 </a>
                 <div class="log"><img alt="LeagueOfGamers Logo" class="logo" src="img/logo.png"></div>
-                <a href="whitelist.html" target="_blank">
+                <a href="whitelist.html">
                     <li class="h">
                         <div class="overlay"></div>
                         Whitelist
