--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
                         Home
                     </li>
                 </a>
-                <a href="whitelist.html" target="_blank">
+                <a href="whitelist.html">
                     <li class="h">
                         <div class="overlay"></div>
                         Whitelist
@@ -61,7 +61,7 @@
                         Store
                     </li>
                 </a>
-                <a href="download.html" target="_blank">
+                <a href="download.html">
                     <li class="h">
                         <div class="overlay"></div>
                         Download
@@ -108,7 +108,7 @@
             <!-- Do it for both examples below -->
             <!-- Please set both your IP and port -->
             <p class="info">Join <span class="sip" data-ip="play.logesport.in" data-port="25565">
-					0</span> other players on <span class="ip">play.logesport.in</span></p>
+                    0</span> other players on <span class="ip">play.logesport.in</span></p>
         </div>
     </header>
     <div class="main">
@@ -116,27 +116,27 @@
             <div>
                 <i class="fa fa-rocket fa-4x"></i>
                 <span>
-					<h3>OUR HISTORY</h3>
-					<p><b>LeagueOfGamers</b> has been around for over 10 Month now. What started off as a small
-						community minecraft server has developed into something we couldn't even imagine.</p>
-				</span>
+                    <h3>OUR HISTORY</h3>
+                    <p><b>LeagueOfGamers</b> has been around for over 10 Month now. What started off as a small
+                        community minecraft server has developed into something we couldn't even imagine.</p>
+                </span>
             </div>
             <div>
                 <i class="fa fa-user fa-4x"></i>
                 <span>
-					<h3>OUR STAFF</h3>
-					<p>The <b>LeagueOfGamers-Pokecraft</b> staff team are friendly, dedicated, and always online to help
-						everything run smoothly. Have any questions? Make sure to Join Discord or use /discord ingame to
-						reach out!</p>
-				</span>
+                    <h3>OUR STAFF</h3>
+                    <p>The <b>LeagueOfGamers-Pokecraft</b> staff team are friendly, dedicated, and always online to help
+                        everything run smoothly. Have any questions? Make sure to Join Discord or use /discord ingame to
+                        reach out!</p>
+                </span>
             </div>
             <div>
                 <i class="fa fa-server fa-4x"></i>
                 <span>
-					<h3>OUR SERVERS</h3>
-					<p>We have <b>Pixlemon</b>, <b>Roleplay</b>, and <b>MC-Duels</b> on our network, all with fully
-						custom builds and useful perks and features. Get whitelisted Today!</p>
-				</span>
+                    <h3>OUR SERVERS</h3>
+                    <p>We have <b>Pixlemon</b>, <b>Roleplay</b>, and <b>MC-Duels</b> on our network, all with fully
+                        custom builds and useful perks and features. Get whitelisted Today!</p>
+                </span>
             </div>
         </div>
         <div id="games">
@@ -214,7 +214,7 @@
                     <div>
                         <h3>Diasuke</h3>
                         <div class="admin helping">Helper</div>
-                        <img alt="MyServer Staff Member" src="img/salman.png">
+                        <img alt="MyServer Staff Member" src="img/diasuke.png">
                     </div>
                 </div>
             </div>
@@ -228,7 +228,7 @@
                     Last 2 Month, 15 hackers were permanently banned from our network.
                     <br><br> New maps, new Gamemode, new plugins; the server has been reinvented. With this new update, whitelisted Pixlemon Roleplay especially has a new (fully custom) map which can hold about 80 players. As well as that, we added...
                     <br><br>
-                    <a href="https://discord.logesport.in/" class="btn">Join Discord</a>
+                    <a href="https://discord.logesport.in/" class="btn" target="_blank">Join Discord</a>
                 </p>
             </div>
         </div>
