--- a/rules.html
+++ b/rules.html
@@ -1,7 +1,8 @@
+<!DOCTYPE html>
 <html>
 
 <head>
-    <title>LeaguOfGamers - PokeCraft</title>
+    <title>LeagueOfGamers - PokeCraft</title>
     <link rel="shortcut icon" type="image/x-icon" href="img/logo.png" />
     <meta name="description" content="LeagueOfGamers is a revolutionary Minecraft server. Which Adds A Pixlemon With Roleplay & Voicechat at India. You can join with the IP 'play.logesport.in'.">
     <meta name="keywords" content="log, Leagueofgamers, Minecraft Server, Minecraft, Fun, Play, Portal, Website, Official, Pixlemon, India, Pixlemon India, Minecraft Roleplay, Minecraft Roleplay India, Best Reoleplay Server India, Voicechat on">
@@ -56,23 +57,39 @@
                 </a>
             </div>
         </div>
-
-        <div class="hero1" id="main">
-            <h1>
-                <div class="container" id="ff-compose"></div>
-                <script async defer src="https://formfacade.com/include/116926949128358884799/form/1FAIpQLSf5lf1dWENv3sG8w5Sz0EaeYcBRU8QUWQxCI3nQI6NIPT-_Bw/bootstrap.js?div=ff-compose"></script>
-            </h1>
-        </div>
     </header>
+    <div class="main">
+        <div id="announcement">
+            <div class="an-img">
+                <h2 style="margin-top: 135px;">RULES</h2>
+                <p class="an-t">
+                    Be respectful and kind towards your fellow players! No harassment, discrimination, hate speech, or controversial discussions in chat.
+                </p>
+                <p class="an-t">
+                    No chat spam! The server is English & Hindi, for any other languages use DMs! Also, advertising or pasting external links that aren't related to the Minecraft server is prohibited.
+                </p>
+                <p class="an-t">
+                    No Hacking/Cheating! We follow a zero-tolerance policy for players trying to use X-Ray, Hacked Clients, Botting, or Cheating of any kind.
+                </p>
+                <p class="an-t">
+                    Don't Grief! Don't take advantage of the claim system to grief other players and ruin their fun. This includes lava-casting outside of claims or generally being disruptive towards another player's builds. Play nice!
+                </p>
+                <p class="an-t">
+                    Obey LoG-Mc Staff! The Log-Mc Staff team are there to help you when needed, but they will mute you from speaking on account of unwarranted behavior if needed
+                </p>
+                <p class="an-t">
+                    Discord necessary for this server for example voice chat , server update , server event , giveaway and many more
+                </p>
+                <p class="an-t">
+                    Exploitaion of bugs Is restricted & might result in a Ban, If you come around Any, Please report them to Moderators!
+                </p>
+            </div>
+        </div>
+    </div>
     <footer>
         <img alt="Server Logo" src="img/logo.png">
         <p>Copyright &copy; LeagueOfGamers 2020</p>
     </footer>
-
-
-    <script src="https://code.jquery.com/jquery-1.11.2.min.js" type="text/javascript"></script>
-    <script src="js/main.js" type="text/javascript"></script>
-
 </body>
 
 </html>
