--- a/whitelist.html
+++ b/whitelist.html
@@ -1,7 +1,7 @@
 <html>
 
 <head>
-    <title>LeaguOfGamers - PokeCraft</title>
+    <title>Whitelist | Pokecraft</title>
     <link rel="shortcut icon" type="image/x-icon" href="img/logo.png" />
     <meta name="description" content="LeagueOfGamers is a revolutionary Minecraft server. Which Adds A Pixlemon With Roleplay & Voicechat at India. You can join with the IP 'play.logesport.in'.">
     <meta name="keywords" content="log, Leagueofgamers, Minecraft Server, Minecraft, Fun, Play, Portal, Website, Official, Pixlemon, India, Pixlemon India, Minecraft Roleplay, Minecraft Roleplay India, Best Reoleplay Server India, Voicechat on">
