--- a/index.html
+++ b/index.html
@@ -272,6 +272,8 @@
     </div>
     <footer>
         <img alt="Server Logo" src="img/logo.png">
+        <a href="rules.html" class="rules">RULES</a>
+        <a href="https://discord.gg/u5SGtw95A6" class="linked">DISCORD</a>
         <p>Copyright &copy; LeagueOfGamers 2020</p>
     </footer>
 
