--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
                 <span>
 					<h3>OUR HISTORY</h3>
 					<p><b>LeagueOfGamers</b> has been around for over 10 Month now. What started off as a small
-						community minecraft server has developed into something we couldn't have evened imagined.</p>
+						community minecraft server has developed into something we couldn't even imagine.</p>
 				</span>
             </div>
             <div>
